--- a/src/app/chip_data_model.gni
+++ b/src/app/chip_data_model.gni
@@ -14,8 +14,8 @@
 
 import("//build_overrides/build.gni")
 import("//build_overrides/chip.gni")
-import("${chip_root}/src/platform/python.gni")
 import("${chip_root}/build/chip/chip_codegen.gni")
+import("${chip_root}/src/platform/python.gni")
 
 import("${chip_root}/src/lib/core/core.gni")
 
@@ -45,16 +45,16 @@ template("chip_data_model") {
     _idl = invoker.idl
   } else {
     # Assume that IDL name is the same as the zap file name, but instead of
-    # '.zap' use '.matter' as extension. This is currently the case in the 
+    # '.zap' use '.matter' as extension. This is currently the case in the
     # sample apps, but may change in the future
     print("AUTO-DETECTING input matter IDL file.")
     _idl = string_replace(invoker.zap_file, ".zap", ".matter")
   }
 
-
   chip_codegen("${_data_model_name}_codegen") {
-    idl = _idl
+    input = _idl
     generator = "cpp-app"
+    outputs = [ "app/PluginApplicationCallbacks.h" ]
   }
 
   config("${_data_model_name}_config") {
