--- a/examples/chef/esp32/main/CMakeLists.txt
+++ b/examples/chef/esp32/main/CMakeLists.txt
@@ -20,6 +20,20 @@ get_filename_component(CHIP_ROOT ${CMAKE_CURRENT_LIST_DIR}/../../../.. REALPATH)
 get_filename_component(CHEF ${CMAKE_CURRENT_SOURCE_DIR}/../../ REALPATH)
 get_filename_component(GEN_DIR ${CHEF}/out/${SAMPLE_NAME}/zap-generated REALPATH)
 
+if (NOT CMAKE_BUILD_EARLY_EXPANSION)
+  include("${CHIP_ROOT}/build/chip/chip_codegen.cmake")
+
+  # TODO: how do I know what matter file to use here???
+  chip_codegen(app-codegen
+    INPUT     "${CHEF}/devices/${SAMPLE_NAME}.matter"
+    GENERATOR "cpp-app"
+    OUTPUTS
+          "app/PluginApplicationCallbacks.h"
+    OUTPUT_PATH   APP_GEN_DIR
+    OUTPUT_FILES  APP_GEN_FILES
+  )
+endif()
+
 # include(${CMAKE_CURRENT_LIST_DIR}/../../project_include.cmake)
 
 # message(STATUS "Product ID " ${CONFIG_DEVICE_PRODUCT_ID})
@@ -34,6 +48,7 @@ set(PRIV_INCLUDE_DIRS_LIST
                       "${CMAKE_SOURCE_DIR}/third_party/connectedhomeip/third_party/nlio/repo/include"
                       "${CMAKE_SOURCE_DIR}/../"
                       "${GEN_DIR}/../"
+                      "${APP_GEN_DIR}"
                       "${CMAKE_SOURCE_DIR}/main/include/"
 )
 
@@ -106,6 +121,7 @@ idf_component_register(PRIV_INCLUDE_DIRS
                       "${PRIV_INCLUDE_DIRS_LIST}"
                       PRIV_REQUIRES chip nvs_flash bt console esp32_mbedtls QRCode tft screen-framework spidriver
                       SRC_DIRS ${SRC_DIRS_LIST})
+add_dependencies(${COMPONENT_LIB} app-codegen)
 
 set_property(TARGET ${COMPONENT_LIB} PROPERTY CXX_STANDARD 17)
 target_compile_options(${COMPONENT_LIB} PRIVATE "-DCHIP_HAVE_CONFIG_H")
