Compile works in GN with compile-time data model

--- a/src/app/chip_data_model.gni
+++ b/src/app/chip_data_model.gni
@@ -96,7 +96,9 @@ template("chip_data_model") {
       deps = []
     }
 
-    deps += [ "${chip_root}/src/app/common:cluster-objects" ]
+    deps += [
+      "${chip_root}/src/app",
+    ]
   }
 
   source_set(_data_model_name) {
