Do not link in/use codegen for servers when the setting is NOT a server

--- a/src/app/chip_data_model.gni
+++ b/src/app/chip_data_model.gni
@@ -64,13 +64,27 @@ template("chip_data_model") {
     generator = "app-templates"
 
     outputs = [
-      "zap-generated/access.h",
       "zap-generated/CHIPClientCallbacks.h",
       "zap-generated/CHIPClusters.h",
-      "zap-generated/endpoint_config.h",
-      "zap-generated/gen_config.h",
-      "zap-generated/IMClusterCommandHandler.cpp",
     ]
+
+    forward_variables_from(invoker, ["is_server"])
+    if (!defined(is_server)) {
+      is_server = false
+    }
+
+    # TODO: this is very odd: codegen WILL generate this for both common 
+    #       AND app-specific code, however we are supposed to use a subset of
+    #       files only for apps. 
+    #
+    if (is_server) {
+      outputs += [
+          "zap-generated/IMClusterCommandHandler.cpp",
+          "zap-generated/access.h",
+          "zap-generated/endpoint_config.h",
+          "zap-generated/gen_config.h",
+      ]
+    }
 
     public_configs = [ ":${_data_model_name}_config" ]
 
