--- a/src/app/chip_data_model.gni
+++ b/src/app/chip_data_model.gni
@@ -134,6 +134,10 @@ template("chip_data_model") {
       sources = []
     }
 
+    if (!defined(is_server)) {
+      is_server = false
+    }
+
     sources += [
       "${_app_root}/clusters/barrier-control-server/barrier-control-server.h",
       "${_app_root}/clusters/basic/basic.h",
@@ -149,8 +153,6 @@ template("chip_data_model") {
       "${_app_root}/util/DataModelHandler.cpp",
       "${_app_root}/util/af-event.cpp",
       "${_app_root}/util/attribute-size-util.cpp",
-      "${_app_root}/util/attribute-storage.cpp",
-      "${_app_root}/util/attribute-table.cpp",
       "${_app_root}/util/binding-table.cpp",
       "${_app_root}/util/binding-table.h",
       "${_app_root}/util/ember-compatibility-functions.cpp",
@@ -158,10 +160,18 @@ template("chip_data_model") {
       "${_app_root}/util/error-mapping.cpp",
       "${_app_root}/util/generic-callback-stubs.cpp",
       "${_app_root}/util/message.cpp",
-      "${_app_root}/util/privilege-storage.cpp",
       "${_app_root}/util/util.cpp",
-      "${chip_root}/zzz_generated/app-common/app-common/zap-generated/attributes/Accessors.cpp",
     ]
+
+    if (is_server) {
+      sources += [
+        "${_app_root}/util/attribute-storage.cpp",
+        "${_app_root}/util/attribute-table.cpp",
+        "${_app_root}/util/privilege-storage.cpp",
+        "${chip_root}/zzz_generated/app-common/app-common/zap-generated/attributes/Accessors.cpp",
+      ]
+    }
+
 
     if (defined(invoker.zap_file)) {
       _zap_path = rebase_path(invoker.zap_file, root_build_dir)
@@ -235,7 +245,7 @@ template("chip_data_model") {
       "${chip_root}/src/protocols/secure_channel",
     ]
 
-    if (defined(invoker.is_server)) {
+    if (is_server) {
       public_deps += [ "${chip_root}/src/app/server" ]
     }
 
