--- a/examples/lighting-app/linux/BUILD.gn
+++ b/examples/lighting-app/linux/BUILD.gn
@@ -51,6 +51,7 @@ executable("chip-lighting-app") {
     deps += [
       "${chip_root}/examples/common/QRCode",
       "${chip_root}/third_party/imgui",
+      "${chip_root}/examples/common/imgui_ui"
     ]
 
     sources += [
