--- a/examples/lighting-app/linux/BUILD.gn
+++ b/examples/lighting-app/linux/BUILD.gn
@@ -50,8 +50,9 @@ executable("chip-lighting-app") {
   if (chip_examples_enable_imgui_ui) {
     deps += [
       "${chip_root}/examples/common/QRCode",
+      "${chip_root}/examples/common/imgui_ui",
+      "${chip_root}/examples/common/imgui_ui:qrcode",
       "${chip_root}/third_party/imgui",
-      "${chip_root}/examples/common/imgui_ui"
     ]
 
     sources += [
