--- a/examples/lighting-app/linux/args.gni
+++ b/examples/lighting-app/linux/args.gni
@@ -15,6 +15,7 @@
 # CHIPProjectConfig.h
 
 import("//build_overrides/chip.gni")
+import("//build_overrides/pigweed.gni")
 
 import("${chip_root}/config/standalone/args.gni")
 
@@ -30,3 +31,14 @@ matter_enable_tracing_support = true
 
 # Perfetto requires C++17
 cpp_standard = "gnu++17"
+
+# test pwtrace
+matter_trace_config = "${chip_root}/src/tracing/pwtrace:pwtrace_tracing"
+
+pw_assert_BACKEND = "$dir_pw_assert_tokenized"
+pw_log_BACKEND = "$dir_pw_log_tokenized"
+
+pw_build_LINK_DEPS = [
+  "$dir_pw_assert:impl",
+  "$dir_pw_log:impl",
+]
