--- a/examples/build_overrides/pw_trace.gni
+++ b/examples/build_overrides/pw_trace.gni
@@ -1,4 +1,4 @@
-# Copyright (c) 2020 Project CHIP Authors
+# Copyright (c) 2023 Project CHIP Authors
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -11,22 +11,20 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
-# CHIPProjectConfig.h
-
 import("//build_overrides/chip.gni")
-
-import("${chip_root}/config/standalone/args.gni")
-
-chip_device_project_config_include = "<CHIPProjectAppConfig.h>"
-chip_project_config_include = "<CHIPProjectAppConfig.h>"
-chip_system_project_config_include = "<SystemProjectConfig.h>"
-
-chip_project_config_include_dirs =
-    [ "${chip_root}/examples/lighting-app/linux/include" ]
-chip_project_config_include_dirs += [ "${chip_root}/config/standalone" ]
+import("//build_overrides/pigweed.gni")
 
 matter_enable_tracing_support = true
 
-# Perfetto requires C++17
-cpp_standard = "gnu++17"
+matter_trace_config = "${chip_root}/src/tracing/pwtrace:pwtrace_tracing"
+
+matter_commandline_enable_pwtrace_tracing = true
+matter_commandline_enable_perfetto_tracing = false
+
+pw_assert_BACKEND = "$dir_pw_assert_tokenized"
+pw_log_BACKEND = "$dir_pw_log_tokenized"
+
+pw_build_LINK_DEPS = [
+  "$dir_pw_assert:impl",
+  "$dir_pw_log:impl",
+]
