--- a/src/app/tests/BUILD.gn
+++ b/src/app/tests/BUILD.gn
@@ -190,7 +190,11 @@ chip_test_suite("tests") {
     "${chip_root}/src/app/icd:manager-srcs",
     "${chip_root}/src/app/tests:helpers",
     "${chip_root}/src/app/util/mock:mock_ember",
+    "${chip_root}/src/controller/data_model:cluster-tlv-metadata",
     "${chip_root}/src/lib/core",
+    "${chip_root}/src/lib/format:flat-tree",
+    "${chip_root}/src/lib/format:protocol-decoder",
+    "${chip_root}/src/lib/format:protocol-tlv-metadata",
     "${chip_root}/src/lib/support:testing",
     "${nlunit_test_root}:nlunit-test",
   ]
