--- a/src/messaging/tests/java/BUILD.gn
+++ b/src/messaging/tests/java/BUILD.gn
@@ -75,6 +75,6 @@ android_library("java") {
 
 if (!matter_enable_java_compilation) {
   java_prebuilt("android") {
-    jar_path = "${android_sdk_root}/platforms/android-26/android.jar"
+    jar_path = "${android_sdk_root}/platforms/android-${android_sdk_version}/android.jar"
   }
 }
