--- a/examples/tv-casting-app/android/BUILD.gn
+++ b/examples/tv-casting-app/android/BUILD.gn
@@ -111,7 +111,7 @@ android_library("java") {
 }
 
 java_prebuilt("android") {
-  jar_path = "${android_sdk_root}/platforms/android-26/android.jar"
+  jar_path = "${android_sdk_root}/platforms/android-${android_sdk_version}/android.jar"
 }
 
 group("default") {
