--- a/src/platform/android/BUILD.gn
+++ b/src/platform/android/BUILD.gn
@@ -121,5 +121,5 @@ android_library("java") {
 }
 
 java_prebuilt("android_sdk") {
-  jar_path = "${android_sdk_root}/platforms/android-26/android.jar"
+  jar_path = "${android_sdk_root}/platforms/android-${android_sdk_version}/android.jar"
 }
